--- a/c_source/Makefile
+++ b/c_source/Makefile
@@ -1,3 +1,3 @@
 build: demo.c startrng.c arduino-serial/arduino-serial-lib.h
-	gcc demo.c -o demo
-	gcc startrng.c -o startrng
+	gcc demo.c -O1 -o demo
+	gcc startrng.c -O1 -o startrng
