modified:   README.md 	modified:   c_source/Makefile 	renamed:    c_source/arduino-serial/LICENSE.txt -> c_source/arduino-serial/LICENSE 	deleted:    c_source/demo.c 	new file:   c_source/demo_aes.c 	new file:   c_source/demo_sha.c 	new file:   c_source/startrng_aes.c 	renamed:    c_source/startrng.c -> c_source/startrng_sha.c 	modified:   randgen.ino

--- a/c_source/Makefile
+++ b/c_source/Makefile
@@ -1,3 +1,9 @@
-build: demo.c startrng.c arduino-serial/arduino-serial-lib.h
-	gcc demo.c -O1 -o demo
-	gcc startrng.c -O1 -o startrng
+.PHONY: sha
+sha: demo_sha.c startrng_sha.c arduino-serial/arduino-serial-lib.h
+	gcc demo_sha.c -O2 -o demo -lcrypto
+	gcc startrng_sha.c -O2 -o startrng -lcrypto
+
+.PHONY: aes
+aes: demo_aes.c startrng_aes.c arduino-serial/arduino-serial-lib.h
+	gcc demo_aes.c -O2 -o demo -lcrypto
+	gcc startrng_aes.c -O2 -o startrng -lcrypto
