modified:   README.md 	modified:   c_source/Makefile 	new file:   c_source/demo_aes2_long.c 	modified:   c_source/demo_sha.c 	new file:   c_source/startrng_aes2_long.c 	new file:   tests.txt

--- a/c_source/Makefile
+++ b/c_source/Makefile
@@ -3,6 +3,11 @@ aes2: demo_aes2.c startrng_aes2.c arduino-serial/arduino-serial-lib.h
 	gcc demo_aes2.c -O2 -o demo -lcrypto
 	gcc startrng_aes2.c -O2 -o startrng -lcrypto
 
+.PHONY: aes2-long
+aes2-long: demo_aes2_long.c startrng_aes2_long.c arduino-serial/arduino-serial-lib.h
+	gcc demo_aes2_long.c -O2 -o demo -lcrypto
+	gcc startrng_aes2_long.c -O2 -o startrng -lcrypto
+
 .PHONY: aes
 aes: demo_aes.c startrng_aes.c arduino-serial/arduino-serial-lib.h
 	gcc demo_aes.c -O2 -o demo -lcrypto
